# MSU-LatentAFIS-ELFT

./: .gitmodules  CMakeLists.txt  elft_msuimpl.cpp  elft_msuimpl.h  elft_msuimpl_enrolldb.cpp  elft_msuimpl_enrolldb.h
libmsu-compare/: CMakeLists.txt  README
